Hinzufügen eines 2. Absatzes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Das ist eine Überschrift</h1>
     <p>Das hier ist ein Absatz</p>
+    <p>Das ist der zweite Absatz</p>
 </body>
 </html>
