--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git-Test</title>
 </head>
 <body>
-    <h1>Das ist eine Überschrift</h1>
+    <h1>Das ist eine andere Überschrift</h1>
     <p>Das hier ist ein Absatz</p>
     <p>Das ist der zweite Absatz</p>
     <h2>Das ist die zweite Überschrift</h2>
